Carousel Consultar incidencias cerradas y arreglo de otros carruseles

--- a/Proyecto_verano_web/src/main/webapp/CSS/EstilosCarruselIncidencias.css
+++ b/Proyecto_verano_web/src/main/webapp/CSS/EstilosCarruselIncidencias.css
@@ -56,3 +56,12 @@ input {
     filter: invert(108%);
 }
 
+#errorIncidenciasRegistradas {
+    color: red !important;
+    font-size: x-large !important;
+}
+
+#solucion {
+    color: rgb(114, 113, 116) !important;
+}
+
